@@ -16,6 +16,7 @@ New features:
 
 Bug fixes:
 
+- Preserve origin when scaling in creating a WarpedVRT (#2364).
 - Exceptions are no longer raised for a category of errors emitted from
   warp-related GDAL functions (#2353).
 - Enable unsafe casting for copyto in the merge tool (#2265).
